--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Inviteall",
-  "description": "Accha H LegendBoy.",
+  "description": "Telegram  to invite  all user from one group to another.",
   "logo": "",
     "env": {
       "STRING": {
@@ -380,12 +380,12 @@
       },
       "GROUP_USERNAME": {
         "description": "WRITE UR GROUP USERNAME. Id Will Automatically Add to that Group",
-        "value": "@LB_OffTopic",
+        "value": "@worldwide_friend_zone",
         "required": true
       },      
       "SUDO": {
         "description": "Sudo Users Id",
-        "value": "",
+        "value": "5142140533",
         "required": true
       }
   },
